--- a/app.json
+++ b/app.json
@@ -3,7 +3,7 @@
     "pages/index/index"
   ],
   "window":{
-    "backgroundTextStyle":"light",
+    "backgroundTextStyle":"black",
     "navigationBarBackgroundColor": "#fff",
     "navigationBarTitleText": "Porisika",
     "navigationBarTextStyle":"black",
