重置之前内容,重头搭建微信小程序页面

--- a/app.json
+++ b/app.json
@@ -1,14 +1,12 @@
 {
   "pages": [
-    "pages/index/index",
-    "pages/list/list"
+    "pages/index/index"
   ],
   "window": {
     "backgroundTextStyle": "dark",
-    "navigationBarBackgroundColor": "#fff",
+    "navigationBarBackgroundColor": "#cbeefd",
     "navigationBarTitleText": "天气小应用",
     "navigationBarTextStyle": "black",
     "enablePullDownRefresh": true
-  },
-  "sitemapLocation": "sitemap.json"
+  }
 }
